--- a/{{ cookiecutter.name }}.xcodeproj/xcshareddata/xcschemes/{{ cookiecutter.name }}-iOS.xcscheme
+++ b/{{ cookiecutter.name }}.xcodeproj/xcshareddata/xcschemes/{{ cookiecutter.name }}-iOS.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "3549BB471DA389F300C63030"
-               BuildableName = "Library.framework"
-               BlueprintName = "Library-tvOS"
-               ReferencedContainer = "container:Library.xcodeproj">
+               BlueprintIdentifier = "3549BB201DA389CD00C63030"
+               BuildableName = "{{ cookiecutter.name }}.framework"
+               BlueprintName = "{{ cookiecutter.name }}-iOS"
+               ReferencedContainer = "container:{{ cookiecutter.name }}.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -45,10 +45,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3549BB471DA389F300C63030"
-            BuildableName = "Library.framework"
-            BlueprintName = "Library-tvOS"
-            ReferencedContainer = "container:Library.xcodeproj">
+            BlueprintIdentifier = "3549BB201DA389CD00C63030"
+            BuildableName = "{{ cookiecutter.name }}.framework"
+            BlueprintName = "{{ cookiecutter.name }}-iOS"
+            ReferencedContainer = "container:{{ cookiecutter.name }}.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -63,10 +63,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "3549BB471DA389F300C63030"
-            BuildableName = "Library.framework"
-            BlueprintName = "Library-tvOS"
-            ReferencedContainer = "container:Library.xcodeproj">
+            BlueprintIdentifier = "3549BB201DA389CD00C63030"
+            BuildableName = "{{ cookiecutter.name }}.framework"
+            BlueprintName = "{{ cookiecutter.name }}-iOS"
+            ReferencedContainer = "container:{{ cookiecutter.name }}.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
