--- a/.travis.yml
+++ b/.travis.yml
@@ -8,18 +8,18 @@ env:
   global:
     - LC_CTYPE=en_US.UTF-8
     - LANG=en_US.UTF-8
-    - WORKSPACE={{ cookiecutter.name }}.xcworkspace
-    - IOS_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-iOS"
-    - OSX_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-macOS"
-    - TVOS_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-tvOS"
-    - WATCHOS_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-watchOS"
+    - WORKSPACE=Framework.xcworkspace
+    - IOS_FRAMEWORK_SCHEME="Framework-iOS"
+    - OSX_FRAMEWORK_SCHEME="Framework-macOS"
+    - TVOS_FRAMEWORK_SCHEME="Framework-tvOS"
+    - WATCHOS_FRAMEWORK_SCHEME="Framework-watchOS"
     - IOS_SDK=iphonesimulator10.1
     - OSX_SDK=macosx10.12
     - TVOS_SDK=appletvsimulator10.0
     - WATCHOS_SDK=watchsimulator3.1
     - EXAMPLE_SCHEME="Example"
   matrix:
-    - DESTINATION="OS=10.1,name=iPhone 7 Plus"     SCHEME="$IOS_FRAMEWORK_SCHEME"     SDK="$IOS_SDK"     RUN_TESTS="YES"  BUILD_EXAMPLE="YES" RELEASE_READY="YES" POD_LINT="YES"
+    - DESTINATION="OS=10.1,name=iPhone 7 Plus"     SCHEME="$IOS_FRAMEWORK_SCHEME"     SDK="$IOS_SDK"     RUN_TESTS="YES"  BUILD_EXAMPLE="YES" RELEASE_READY="YES" POD_LINT="NO"
     - DESTINATION="OS=9.0,name=iPhone 6s"          SCHEME="$IOS_FRAMEWORK_SCHEME"     SDK="$IOS_SDK"     RUN_TESTS="YES"  BUILD_EXAMPLE="YES" RELEASE_READY="NO"  POD_LINT="NO"
     - DESTINATION="OS=8.1,name=iPhone 5"           SCHEME="$IOS_FRAMEWORK_SCHEME"     SDK="$IOS_SDK"     RUN_TESTS="YES"  BUILD_EXAMPLE="YES" RELEASE_READY="NO"  POD_LINT="NO"
     - DESTINATION="arch=x86_64"                    SCHEME="$OSX_FRAMEWORK_SCHEME"     SDK="$OSX_SDK"     RUN_TESTS="YES"  BUILD_EXAMPLE="NO"  RELEASE_READY="NO"  POD_LINT="NO"
@@ -32,9 +32,11 @@ before_install:
   - gem install cocoapods --pre --no-rdoc --no-ri --no-document --quiet
   - brew update
   - brew outdated carthage || brew upgrade carthage
+  - brew install cookiecutter
+  - cookiecutter -c develop --no-input https://github.com/cookiecutter-swift/Framework
 
 before_script:
-  - sh scripts/bootstrap
+  - cd Framework
 
 script:
   - set -o pipefail
@@ -56,9 +58,9 @@ script:
     fi
 
   # Build Example in Debug if specified
-  - if [ $BUILD_EXAMPLE == "YES" ]; then
-     xcodebuild -workspace "$WORKSPACE" -scheme "$EXAMPLE_SCHEME" -sdk "$SDK" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty -c;
-   fi
+  # - if [ $BUILD_EXAMPLE == "YES" ]; then
+  #   xcodebuild -workspace "$WORKSPACE" -scheme "$EXAMPLE_SCHEME" -sdk "$SDK" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty -c;
+  # fi
 
   # Run `pod lib lint` if specified
   - if [ $POD_LINT == "YES" ]; then
@@ -67,22 +69,17 @@ script:
 
 before_deploy:
   - carthage build --no-skip-current
-  - carthage archive {{ cookiecutter.name }}
+  - carthage archive Framework
 
 deploy:
   - provider: releases
     api_key:
       secure:
     file:
-      - {{ cookiecutter.name }}.framework.zip
+      - Framework.framework.zip
     skip_cleanup: true
     overwrite: true
     on:
-      repo: {{ cookiecutter.organization_name }}/{{ cookiecutter.name }}
-      tags: true
-      condition: $RELEASE_READY = YES
-  - provider: script
-    script: sh scripts/cocoapods
-    on:
+      repo: cookiecutter-swift/Framework
       tags: true
       condition: $RELEASE_READY = YES
