--- a/FRAMEWORKNAME/.travis.yml
+++ b/FRAMEWORKNAME/.travis.yml
@@ -13,11 +13,11 @@ env:
   global:
   - LC_CTYPE=en_US.UTF-8
   - LANG=en_US.UTF-8
-  - WORKSPACE={{ cookiecutter.name }}.xcworkspace
-  - IOS_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-iOS"
-  - OSX_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-macOS"
-  - TVOS_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-tvOS"
-  - WATCHOS_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-watchOS"
+  - WORKSPACE=FRAMEWORKNAME.xcworkspace
+  - IOS_FRAMEWORK_SCHEME="FRAMEWORKNAME-iOS"
+  - OSX_FRAMEWORK_SCHEME="FRAMEWORKNAME-macOS"
+  - TVOS_FRAMEWORK_SCHEME="FRAMEWORKNAME-tvOS"
+  - WATCHOS_FRAMEWORK_SCHEME="FRAMEWORKNAME-watchOS"
   matrix:
     - DESTINATION="OS=11.0,name=iPhone X"                   SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
     - DESTINATION="OS=10.3.1,name=iPhone 7 Plus"            SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
@@ -57,7 +57,7 @@ jobs:
   include:
     - script: pod lib lint --verbose --allow-warnings
     - stage: deploy
-      before_deploy: carthage build --no-skip-current && carthage archive {{ cookiecutter.name }}
+      before_deploy: carthage build --no-skip-current && carthage archive FRAMEWORKNAME
       deploy:
         - provider: releases
           api_key:
@@ -67,7 +67,7 @@ jobs:
           skip_cleanup: true
           overwrite: true
           on:
-            repo: {{ cookiecutter.github_name }}/{{ cookiecutter.name }}
+            repo: FRAMEWORKGITHUBNAME/FRAMEWORKNAME
             tags: true
         - provider: script
           script: pod trunk push
