--- a/{{ cookiecutter.name }}/.travis.yml
+++ b/{{ cookiecutter.name }}/.travis.yml
@@ -57,7 +57,7 @@ jobs:
   include:
     - script: pod lib lint --verbose --allow-warnings
     - stage: deploy
-      before_deploy: carthage build --no-skip-current && carthage archive {{ cookiecutter.name }}
+      before_deploy: carthage build --no-skip-current --cache-builds && carthage archive {{ cookiecutter.name }}
       deploy:
         - provider: releases
           api_key:
