--- a/FRAMEWORKNAME/.travis.yml
+++ b/FRAMEWORKNAME/.travis.yml
@@ -1,9 +1,14 @@
 language: objective-c
-osx_image: xcode9
+osx_image: xcode9.2
 branches:
   only:
+  - master
   - develop
   - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
+cache:
+  directories:
+    - Carthage
+
 before_install:
   - gem install cocoapods --no-rdoc --no-ri --no-document --quiet
   - brew update
@@ -19,10 +24,10 @@ env:
   - TVOS_FRAMEWORK_SCHEME="FRAMEWORKNAME-tvOS"
   - WATCHOS_FRAMEWORK_SCHEME="FRAMEWORKNAME-watchOS"
   matrix:
-    - DESTINATION="OS=11.0,name=iPhone X"                   SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
+    - DESTINATION="OS=11.2,name=iPhone X"                   SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
     - DESTINATION="OS=10.3.1,name=iPhone 7 Plus"            SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
     - DESTINATION="OS=9.0,name=iPhone 6"                    SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
-    - DESTINATION="OS=8.1,name=iPhone 4s"                   SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
+    - DESTINATION="OS=8.1,name=iPhone 5s"                   SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
     - DESTINATION="arch=x86_64"                             SCHEME="$OSX_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
     - DESTINATION="OS=11.0,name=Apple TV 1080p"             SCHEME="$TVOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"
     - DESTINATION="OS=10.2,name=Apple TV 1080p"             SCHEME="$TVOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"
@@ -32,7 +37,7 @@ env:
     - DESTINATION="OS=2.0,name=Apple Watch - 38mm"          SCHEME="$WATCHOS_FRAMEWORK_SCHEME" RUN_TESTS="NO"
 
 before_script:
-  - sh scripts/bootstrap
+  - carthage bootstrap --verbose --no-use-binaries --cache-builds
 
 script:
   - set -o pipefail
@@ -61,7 +66,7 @@ jobs:
       deploy:
         - provider: releases
           api_key:
-            secure: 
+            secure:
           file:
             - FRAMEWORKNAME.framework.zip
           skip_cleanup: true
