--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,8 @@ jobs:
   include:
   - stage: Pod lib lint
     script: pod lib lint --verbose --allow-warnings
-  - stage: deploy
+  - stage: Deploy
+    script: skip
     before_deploy: carthage build --no-skip-current && carthage archive Framework
     deploy:
     - provider: releases
