--- a/{{ cookiecutter.name }}/.travis.yml
+++ b/{{ cookiecutter.name }}/.travis.yml
@@ -7,6 +7,7 @@ branches:
   - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
 cache:
   directories:
+    - $HOME/Library/Caches/org.carthage.CarthageKit/dependencies
     - Carthage
     - vendor/bundle
 
@@ -17,13 +18,13 @@ before_install:
 
 env:
   global:
-  - LC_CTYPE=en_US.UTF-8
-  - LANG=en_US.UTF-8
-  - WORKSPACE={{ cookiecutter.name }}.xcworkspace
-  - IOS_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-iOS"
-  - OSX_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-macOS"
-  - TVOS_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-tvOS"
-  - WATCHOS_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-watchOS"
+    - LC_CTYPE=en_US.UTF-8
+    - LANG=en_US.UTF-8
+    - WORKSPACE={{ cookiecutter.name }}.xcworkspace
+    - IOS_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-iOS"
+    - OSX_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-macOS"
+    - TVOS_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-tvOS"
+    - WATCHOS_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-watchOS"
   matrix:
     - DESTINATION="OS=11.2,name=iPhone X"                   SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
     - DESTINATION="OS=10.3.1,name=iPhone 7 Plus"            SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
@@ -67,11 +68,13 @@ jobs:
       script: bundle exec pod lib lint --verbose --allow-warnings
     - stage: Deploy
       script: skip
-      before_deploy: carthage build --no-skip-current && carthage archive {{ cookiecutter.name }}
+      before_deploy:
+        - carthage build --no-skip-current --cache-builds
+        - carthage archive {{ cookiecutter.name }}
       deploy:
         - provider: releases
           api_key:
-            secure:
+            secure: 
           file:
             - {{ cookiecutter.name }}.framework.zip
           skip_cleanup: true
@@ -80,6 +83,6 @@ jobs:
             repo: {{ cookiecutter.github_name }}/{{ cookiecutter.name }}
             tags: true
         - provider: script
-          script: pod trunk push
+          script: bundle exec pod trunk push
           on:
             tags: true
