--- a/FRAMEWORKNAME/Tests/Info-tvOS.plist
+++ b/FRAMEWORKNAME/Tests/Info-tvOS.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.0.1</string>
+	<string>FRAMEWORKVERSION</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>UIRequiredDeviceCapabilities</key>
