--- a/{{ cookiecutter.name }}/Tests/Info.plist
+++ b/{{ cookiecutter.name }}/Tests/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.0.1</string>
+	<string>{{ cookiecutter.version }}</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 </dict>
