--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ branches:
 before_install:
 - brew update
 - brew install cookiecutter
-- gem install xcpretty
 - cookiecutter -c develop --no-input https://github.com/RahulKatariya/FrameworkTemplate
 env:
   global:
@@ -39,14 +38,14 @@ script:
 - xcodebuild -showsdks
 - if [ $RUN_TESTS == "YES" ]; then
     xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES
-  test | xcpretty -c;
+  test;
   else
-    xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build | xcpretty -c;
+    xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Debug ONLY_ACTIVE_ARCH=NO build;
   fi
 - if [ $RUN_TESTS == "YES" ]; then
-    xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test | xcpretty -c;
+    xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO ENABLE_TESTABILITY=YES test;
   else
-    xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build | xcpretty -c;
+    xcodebuild -workspace "$WORKSPACE" -scheme "$SCHEME" -destination "$DESTINATION" -configuration Release ONLY_ACTIVE_ARCH=NO build;
   fi
 jobs:
   include:
