--- a/{{ cookiecutter.name }}/.travis.yml
+++ b/{{ cookiecutter.name }}/.travis.yml
@@ -1,10 +1,10 @@
 language: objective-c
-osx_image: xcode9.4
+osx_image: xcode10
 branches:
   only:
-  - master
-  - develop
-  - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
+    - master
+    - develop
+    - /^v\d+\.\d+(\.\d+)?(-\S*)?$/
 cache:
   directories:
     - $HOME/Library/Caches/org.carthage.CarthageKit/dependencies
@@ -27,15 +27,17 @@ env:
     - TVOS_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-tvOS"
     - WATCHOS_FRAMEWORK_SCHEME="{{ cookiecutter.name }}-watchOS"
   matrix:
+    - DESTINATION="OS=12.0,name=iPhone XS"                  SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
     - DESTINATION="OS=11.4,name=iPhone X"                   SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
     - DESTINATION="OS=10.3.1,name=iPhone 7 Plus"            SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
     - DESTINATION="OS=9.0,name=iPhone 6"                    SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
-    - DESTINATION="OS=8.1,name=iPhone 5s"                   SCHEME="$IOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
     - DESTINATION="arch=x86_64"                             SCHEME="$OSX_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
+    - DESTINATION="OS=12.0,name=Apple TV 4K (at 1080p)"     SCHEME="$TVOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"
     - DESTINATION="OS=11.4,name=Apple TV 4K (at 1080p)"     SCHEME="$TVOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"
     - DESTINATION="OS=10.2,name=Apple TV 1080p"             SCHEME="$TVOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"
     - DESTINATION="OS=9.0,name=Apple TV 1080p"              SCHEME="$TVOS_FRAMEWORK_SCHEME"    RUN_TESTS="YES"
-    - DESTINATION="OS=4.3,name=Apple Watch Series 2 - 42mm" SCHEME="$WATCHOS_FRAMEWORK_SCHEME" RUN_TESTS="NO"
+    - DESTINATION="OS=5.0,name=Apple Watch Series 4 - 44mm" SCHEME="$WATCHOS_FRAMEWORK_SCHEME" RUN_TESTS="NO"
+    - DESTINATION="OS=4.2,name=Apple Watch Series 3 - 42mm" SCHEME="$WATCHOS_FRAMEWORK_SCHEME" RUN_TESTS="NO"
     - DESTINATION="OS=3.1,name=Apple Watch Series 2 - 42mm" SCHEME="$WATCHOS_FRAMEWORK_SCHEME" RUN_TESTS="NO"
     - DESTINATION="OS=2.0,name=Apple Watch - 38mm"          SCHEME="$WATCHOS_FRAMEWORK_SCHEME" RUN_TESTS="NO"
 
@@ -73,9 +75,9 @@ jobs:
         - carthage build --no-skip-current --cache-builds
         - carthage archive {{ cookiecutter.name }}
       deploy:
-        - provider: releases
+        - provider: releases 
           api_key:
-            secure: 
+            secure: # https://docs.travis-ci.com/user/deployment/releases/
           file:
             - {{ cookiecutter.name }}.framework.zip
           skip_cleanup: true
@@ -86,7 +88,7 @@ jobs:
     - stage: Deploy Cocoapods
       script: skip
       deploy:
-        - provider: script
+        - provider: script # https://fuller.li/posts/automated-cocoapods-releases-with-ci/
           script: bundle exec pod trunk push
           skip_cleanup: true
           on:
