--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: objective-c
-osx_image: xcode10
+osx_image: xcode10.1
 branches:
   only:
     - master
+    - develop
     - "/^xcode\\d+$/"
 cache:
   directories:
@@ -25,16 +26,16 @@ env:
     - TVOS_FRAMEWORK_SCHEME="Framework-tvOS"
     - WATCHOS_FRAMEWORK_SCHEME="Framework-watchOS"
   matrix:
-    - DESTINATION="OS=12.0,name=iPhone XS"                  SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES"
+    - DESTINATION="OS=12.1,name=iPhone XS"                  SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES"
     - DESTINATION="OS=11.4,name=iPhone X"                   SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES"
     - DESTINATION="OS=10.3.1,name=iPhone 7 Plus"            SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES"
     - DESTINATION="OS=9.0,name=iPhone 6"                    SCHEME="$IOS_FRAMEWORK_SCHEME"      RUN_TESTS="YES"
     - DESTINATION="arch=x86_64"                             SCHEME="$OSX_FRAMEWORK_SCHEME"      RUN_TESTS="YES"
-    - DESTINATION="OS=12.0,name=Apple TV 4K (at 1080p)"     SCHEME="$TVOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
+    - DESTINATION="OS=12.1,name=Apple TV 4K (at 1080p)"     SCHEME="$TVOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
     - DESTINATION="OS=11.4,name=Apple TV 4K (at 1080p)"     SCHEME="$TVOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
     - DESTINATION="OS=10.2,name=Apple TV 1080p"             SCHEME="$TVOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
     - DESTINATION="OS=9.0,name=Apple TV 1080p"              SCHEME="$TVOS_FRAMEWORK_SCHEME"     RUN_TESTS="YES"
-    - DESTINATION="OS=5.0,name=Apple Watch Series 4 - 44mm" SCHEME="$WATCHOS_FRAMEWORK_SCHEME"  RUN_TESTS="NO"
+    - DESTINATION="OS=5.1,name=Apple Watch Series 4 - 44mm" SCHEME="$WATCHOS_FRAMEWORK_SCHEME"  RUN_TESTS="NO"
     - DESTINATION="OS=4.2,name=Apple Watch Series 3 - 42mm" SCHEME="$WATCHOS_FRAMEWORK_SCHEME"  RUN_TESTS="NO"
     - DESTINATION="OS=3.1,name=Apple Watch Series 2 - 42mm" SCHEME="$WATCHOS_FRAMEWORK_SCHEME"  RUN_TESTS="NO"
     - DESTINATION="OS=2.0,name=Apple Watch - 38mm"          SCHEME="$WATCHOS_FRAMEWORK_SCHEME"  RUN_TESTS="NO"
